feat: migrate My Studies API
