# addons/addon-base-raas/packages/base-raas-rest-api/lib/controllers/migration-controller.js
@@ -1,0 +1,37 @@
+/*
+ *  Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License").
+ *  You may not use this file except in compliance with the License.
+ *  A copy of the License is located at
+ *
+ *  http://aws.amazon.com/apache2.0
+ *
+ *  or in the "license" file accompanying this file. This file is distributed
+ *  on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ *  express or implied. See the License for the specific language governing
+ *  permissions and limitations under the License.
+ */
+
+async function configure(context) {
+  const router = context.router();
+  const wrap = context.wrap;
+
+  // ===============================================================
+  //  PUT /mystudies (mounted to /api/migrate)
+  // ===============================================================
+  router.put(
+    '/mystudies',
+    wrap(async (req, res) => {
+      const migrationService = await context.service('migrationService');
+      const requestContext = res.locals.requestContext;
+      const migrationMappings = req.body;
+      const result = await migrationService.migratePermissions(requestContext, migrationMappings);
+      res.status(200).json(result);
+    }),
+  );
+
+  return router;
+}
+
+module.exports = configure;
